重新设计仪表板并添加月度销售统计功能
- 移除管理鹦鹉和种鸟管理按钮
- 新增渐变色统计卡片（总数/在售/已售/销售额）
- 添加月度销售趋势图表（支持折线图/柱状图切换）
- 添加品种分布统计卡片
- 实现仪表板卡片点击跳转列表页并自动应用筛选条件
- 后端新增 /api/statistics/monthly-sales 接口
- 安装 @ant-design/charts 图表库
- 添加 python-dateutil 依赖

--- a/parrot-management-system/package.json
+++ b/parrot-management-system/package.json
@@ -17,6 +17,7 @@
     "vite": "^7.2.2"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.6.6",
     "@tailwindcss/postcss": "^4.1.17",
     "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
