--- a/parrot-management-system/package.json
+++ b/parrot-management-system/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@ant-design/charts": "^2.6.6",
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@tailwindcss/postcss": "^4.1.17",
     "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
