feat: 添加环境配置文件和生产环境部署指南，优化数据库连接和初始化脚本

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+# ===========================================
+# 基础依赖
+# ===========================================
 fastapi==0.115.5
 uvicorn[standard]==0.32.1
 sqlalchemy==2.0.36
@@ -5,3 +8,27 @@ pydantic==2.10.3
 python-multipart==0.0.20
 aiofiles==24.1.0
 python-dateutil==2.9.0
+pydantic-settings==2.6.1
+
+# ===========================================
+# 数据库驱动 (根据需要选择安装)
+# ===========================================
+
+# MySQL 驱动
+# PyMySQL (纯 Python 实现，推荐)
+PyMySQL==1.1.1
+# 或者使用 mysqlclient (C 扩展，性能更好)
+# mysqlclient==2.2.4
+
+# PostgreSQL 驱动
+psycopg2-binary==2.9.10
+
+# SQLite (Python 内置，无需安装)
+# 默认支持
+
+# ===========================================
+# 可选依赖
+# ===========================================
+# redis==5.2.0  # 缓存
+# celery==5.4.0  # 任务队列
+# prometheus-client==0.21.1  # 监控
