--- a/parrot-management-system/package.json
+++ b/parrot-management-system/package.json
@@ -9,24 +9,23 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@types/node": "^24.10.1",
-    "autoprefixer": "^10.4.22",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17",
-    "typescript": "~5.9.3",
-    "vite": "^7.2.2"
+    "@types/node": "^20.10.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6",
+    "typescript": "~5.3.3",
+    "vite": "^4.5.0"
   },
   "dependencies": {
-    "@ant-design/charts": "^2.6.6",
-    "@ant-design/v5-patch-for-react-19": "^1.0.3",
-    "@tailwindcss/postcss": "^4.1.17",
-    "@types/react": "^19.2.6",
-    "@types/react-dom": "^19.2.3",
-    "antd": "^5.28.1",
-    "axios": "^1.13.2",
-    "dayjs": "^1.11.19",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.6"
+    "@ant-design/charts": "^2.0.0",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "antd": "^5.12.2",
+    "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
+    "moment": "^2.30.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.1"
   }
 }
