--- a/parrot-management-system/.env.production
+++ b/parrot-management-system/.env.production
@@ -1,2 +1,2 @@
-# 生产环境 API 地址（部署后需要替换为实际的后端地址）
-VITE_API_URL=https://parrot-api.onrender.com/api
+# 生产环境 API 地址
+VITE_API_URL=http://103.110.81.83/api
