开发小程序的功能

--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,9 @@ ALLOWED_EXTENSIONS=png,jpg,jpeg,gif,mp4,mov,avi,mkv,webm
 # 生产环境: 你的域名，如 https://yourdomain.com
 CORS_ORIGINS=["http://localhost:5173", "https://yourdomain.com"]
 
+# 前端地址 (用于生成分享链接)
+# FRONTEND_URL=http://localhost:5173
+
 # ===========================================
 # 分页配置
 # ===========================================
