--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -25,10 +25,30 @@
     "selectedColor": "#667eea",
     "backgroundColor": "#ffffff",
     "list": [
-      { "pagePath": "pages/index/index", "text": "首页" },
-      { "pagePath": "pages/parrot/list/index", "text": "鹦鹉" },
-      { "pagePath": "pages/sales/list/index", "text": "销售" },
-      { "pagePath": "pages/profile/index", "text": "我的" }
+      {
+        "pagePath": "pages/index/index",
+        "text": "首页",
+        "iconPath": "images/tabbar/home.png",
+        "selectedIconPath": "images/tabbar/home-active.png"
+      },
+      {
+        "pagePath": "pages/parrot/list/index",
+        "text": "鹦鹉",
+        "iconPath": "images/tabbar/parrot.png",
+        "selectedIconPath": "images/tabbar/parrot-active.png"
+      },
+      {
+        "pagePath": "pages/sales/list/index",
+        "text": "销售",
+        "iconPath": "images/tabbar/sales.png",
+        "selectedIconPath": "images/tabbar/sales-active.png"
+      },
+      {
+        "pagePath": "pages/profile/index",
+        "text": "我的",
+        "iconPath": "images/tabbar/profile.png",
+        "selectedIconPath": "images/tabbar/profile-active.png"
+      }
     ]
   },
   "sitemapLocation": "sitemap.json"
