refactor(miniprogram): 更新图标和组件样式
- 添加占位图标（鹦鹉、视频）
- 更新tabbar图标（育种、孵化）
- 删除未使用的profile页面
- 优化图表组件样式
- 更新通用样式

--- a/miniprogram/project.config.json
+++ b/miniprogram/project.config.json
@@ -1,7 +1,7 @@
 {
   "projectname": "parrot-miniprogram",
   "description": "鹦鹉管理小程序",
-  "appid": "wx86303ae2df6bcdab",
+  "appid": "wx013459f02ef0288c",
   "setting": {
     "urlCheck": false,
     "es6": true,
